--- a/Da3wa.WebUI/Views/Home/Dashboard.cshtml
+++ b/Da3wa.WebUI/Views/Home/Dashboard.cshtml
@@ -171,6 +171,22 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-md-6 mb-3">
+                        <a href="@Url.Action("Index", "Guest")" class="text-decoration-none">
+                            <div class="d-flex align-items-center p-3 border rounded hover-shadow">
+                                <div class="me-3">
+                                    <i class="fas fa-users fa-2x text-purple"></i>
+                                </div>
+                                <div>
+                                    <h6 class="mb-1">Guests</h6>
+                                    <p class="text-muted mb-0">Manage event guests</p>
+                                </div>
+                                <div class="ms-auto">
+                                    <i class="fas fa-chevron-right text-muted"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
