--- a/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -569,6 +569,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Guest" asp-action="Index">
+                                        <i class="fas fa-users"></i>
+                                        <span class="menu-text">Guests</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" asp-controller="Auth" asp-action="Index">
                                         <i class="fas fa-users-cog"></i>
                                         <span class="menu-text">User Management</span>
