--- a/Da3wa.WebUI/Views/Guest/Details.cshtml
+++ b/Da3wa.WebUI/Views/Guest/Details.cshtml
@@ -139,6 +139,20 @@
                 </div>
             </div>
         }
+
+        @if (!string.IsNullOrEmpty(Model.InvitationImagePath))
+        {
+            <div class="admin-card mt-4">
+                <div class="card-header">
+                    <h5 class="card-title mb-0">
+                        <i class="fas fa-id-card me-2"></i>Generated Invitation
+                    </h5>
+                </div>
+                <div class="card-body text-center">
+                    <img src="@Model.InvitationImagePath" alt="Invitation" class="img-fluid rounded border" style="max-height: 500px;">
+                </div>
+            </div>
+        }
     </div>
 
     <!-- Sidebar Information -->
