--- a/Da3wa.WebUI/Views/Guest/Index.cshtml
+++ b/Da3wa.WebUI/Views/Guest/Index.cshtml
@@ -59,6 +59,7 @@
                     <table class="table table-hover" id="guestTable">
                         <thead>
                             <tr>
+                                <th>Invitation</th>
                                 <th>Full Name</th>
                                 <th>Event</th>
                                 <th>Phone Numbers</th>
@@ -72,6 +73,18 @@
                             @foreach (var guest in Model)
                             {
                                 <tr>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(guest.InvitationImagePath))
+                                        {
+                                            <img src="@guest.InvitationImagePath" alt="QR" class="rounded" style="width: 50px; height: 50px; object-fit: cover;">
+                                        }
+                                        else
+                                        {
+                                            <div class="bg-light rounded d-flex align-items-center justify-content-center" style="width: 50px; height: 50px;">
+                                                <i class="fas fa-qrcode text-muted"></i>
+                                            </div>
+                                        }
+                                    </td>
                                     <td>@guest.FullName</td>
                                     <td>@(guest.Event?.Name ?? "N/A")</td>
                                     <td>
